--- a/app/src/main/res/layout/activity_oefen_categorieen.xml
+++ b/app/src/main/res/layout/activity_oefen_categorieen.xml
@@ -2,8 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/recyclerContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="10dp"
@@ -30,17 +29,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="7.5dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="7.5dp"
             android:gravity="center_horizontal|center_vertical"
             android:text="" />
-
-        <Button
-            android:id="@+id/recyclerOefenen"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="7.5dp"
-            android:layout_marginEnd="16dp"
-            android:text="Oefenen" />
 
     </LinearLayout>
 
