Speel scherm compleet
Bij het speel scherm krijg je een vraag met daarnaast het amazigh woord. Daaronder zijn 6 afbeeldingen. Als je erop klikt dan controleert het of het het goede antwoord is en dan gaat het verder naar de volgende vraag.

--- a/app/src/main/res/layout/activity_main_speel.xml
+++ b/app/src/main/res/layout/activity_main_speel.xml
@@ -6,10 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".Speel.MainSpeel">
 
+    <TextView
+        android:id="@+id/vraag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/amazighWoord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="sdcsdcs"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.37"
+        app:layout_constraintStart_toEndOf="@+id/vraag"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.014" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
