--- a/app/src/main/res/layout/activity_speel.xml
+++ b/app/src/main/res/layout/activity_speel.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/imageContainer"
     android:layout_width="match_parent"
     android:layout_height="150dp"
     android:layout_marginHorizontal="10dp"
@@ -16,5 +16,6 @@
        android:id="@+id/imageSpeel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:layout_margin="10dp" />
+       android:layout_margin="10dp"
+       />
 </androidx.cardview.widget.CardView>
